# LegalChat

./: AGENTS.md  READMD.md  README.md  package.json  pnpm-lock.yaml
.codex/skills/legal-document-processing-pipeline/: SKILL.md
.codex/skills/legal-rag-react-frontend/: SKILL.md
.gemini/skills/code-review-and-comments/: SKILL.md
Backend/: .env  hello.py  pyproject.toml
Backend/app/: main.py
Backend/app/core/: config.py
Backend/app/db/: session.py
Backend/app/models/: document.py
Data/JSON/: Birketu Pty Ltd v Atanaskovic [2025] HCA 2 (5 February 2025).json  Bogan v The Estate of Peter John Smedley (Deceased) [2025] HCA 7 (12 March 2025).json  Commonwealth of Australia v Yunupingu [2025] HCA 6 (12 March 2025).json  KMD v CEO (Department of Health NT) [2025] HCA 4 (27 February 2025).json  Naaman v Jaken Properties Australia Pty Limited [2025] HCA 1 (5 February 2025).json  The King v Batak [2025] HCA 18 (7 May 2025).json
Doc/: AI  RAG PRD.md  Backend.md  FontendPRD.md  ProjectPRD.md  中文.md  产品 PRD.md  前端 PRD.md  后端 PRD.md  数据库与数据模型 PRD.md
apps/api/: .gitignore  README.md  package.json  tsconfig.json  wrangler.jsonc
apps/web/: README.md  next.config.ts  package.json
frontend/: package.json  pnpm-lock.yaml
infra/: docker-compose.yaml
infra/docker/: docker-compose.yaml
openspec/: project.md
skills/gemini-openspec-orchestrator/: SKILL.md
skills/legal-rag-fastapi-backend/: SKILL.md
tools/: README.md  __init__.py  requirements.txt
tools/legal_importer/: __init__.py  __main__.py  cli.py  config.py  models.py  pdf.py  pipeline.py  storage.py
(+95 files in other folders)
